test/files/errors/wrongType1.jg
_main int ()
{
    b bool;

    b = "hello"; # error
    0 return;
}